--- a/publications.bib
+++ b/publications.bib
@@ -17,3 +17,9 @@
   owner =     {mic},
   timestamp = {2015-03-19}
 }
+@inproceedings{morelli2022dresscode,
+  title={{Dress Code: High-Resolution Multi-Category Virtual Try-On}},
+  author={Morelli, Davide and Fincato, Matteo and Cornia, Marcella and Landi, Federico and Cesari, Fabio and Cucchiara, Rita},
+  booktitle={Proceedings of the European Conference on Computer Vision},
+  year={2022}
+}
