--- a/publications.bib
+++ b/publications.bib
@@ -23,3 +23,22 @@
   booktitle={Proceedings of the European Conference on Computer Vision},
   year={2022}
 }
+@INPROCEEDINGS{9412052,
+  author={Fincato, Matteo and Landi, Federico and Cornia, Marcella and Cesari, Fabio and Cucchiara, Rita},
+  booktitle={2020 25th International Conference on Pattern Recognition (ICPR)},
+  title={VITON-GT: An Image-based Virtual Try-On Model with Geometric Transformations},
+  year={2021},
+  volume={},
+  number={},
+  pages={7669-7676},
+  keywords={Computer vision;Clothing;Computer architecture;Distortion;User experience;Pattern recognition;Electronic commerce},
+  doi={10.1109/ICPR48806.2021.9412052}}
+@article{Fincato2022TransformWA,
+  title={Transform, Warp, and Dress: A New Transformation-guided Model for Virtual Try-on},
+  author={Matteo Fincato and Marcella Cornia and Federico Landi and Fabio Cesari and Rita Cucchiara},
+  journal={ACM Transactions on Multimedia Computing, Communications, and Applications (TOMM)},
+  year={2022},
+  volume={18},
+  pages={1 - 24},
+  url={https://api.semanticscholar.org/CorpusID:246919976}
+}
